{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 22,
  "lineage": "c914560d-9ddd-b749-a157-b556744bb1a9",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "flask",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-11-30T02:46:12.740-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/skytjenester/global/firewalls/flask-app-firewall",
            "log_config": [],
            "name": "flask-app-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/skytjenester/global/networks/skytjenester-net",
            "priority": 1000,
            "project": "skytjenester",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skytjenester/global/firewalls/flask-app-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "flask"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-11-30T02:46:13.423-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/skytjenester/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/skytjenester/global/networks/skytjenester-net",
            "priority": 1000,
            "project": "skytjenester",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skytjenester/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "skytjenester_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20231101",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/skytjenester/zones/europe-west1-c/disks/skytjenester-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/skytjenester/zones/europe-west1-c/instances/skytjenester-vm",
            "instance_id": "6027093580601218366",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "Pette:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCxmMreIBEoAujY9bxHR+8Lrj9eFuwKt1kVJnadypBjTlp+ufMgJKLH8+ioaGYANPrRBor40auSR3AG7+ZdTJBRH9u3e8yZCbfnRzjy2SkT/pVSQq5z7olJH9yLnPPdN4iPxwFpb0wg47LgbyJ7XpL4Pdqi/YDzkHKVt8/BXH0/UJ23GhMPeTJTqfArd1glUOc7V7jORYX0VWTmtwARWqkjerviEvm7ibKy7VQ3MEYMhS2ulF/fZvL7+YVG2T2jXA85TqrafM5Fqivfh/VzI8pPtlKCrug5PXp5az5ChNpxSqdA8keFxI652gdChsEE6cn5ElXVxxa34xYM7Msez0Uz pette@Edvardsn\r\n"
            },
            "metadata_fingerprint": "CcseV84vf5U=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -yq build-essential python3-pip rsync; pip install flask",
            "name": "skytjenester-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.187.189.62",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/skytjenester/global/networks/skytjenester-net",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/skytjenester/regions/europe-west1/subnetworks/skytjenester-subnet",
                "subnetwork_project": "skytjenester"
              }
            ],
            "project": "skytjenester",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/skytjenester/zones/europe-west1-c/instances/skytjenester-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "flask",
              "ssh"
            ],
            "tags_fingerprint": "mIg-SYImefE=",
            "zone": "europe-west1-c"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/skytjenester/global/networks/skytjenester-net",
            "mtu": 1460,
            "name": "skytjenester-net",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "skytjenester",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skytjenester/global/networks/skytjenester-net"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-30T02:46:13.484-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/skytjenester/regions/europe-west1/subnetworks/skytjenester-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "skytjenester-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/skytjenester/global/networks/skytjenester-net",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "skytjenester",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skytjenester/regions/europe-west1/subnetworks/skytjenester-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}